--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@
 
 h1 {
     text-align: center;
-    font-size: 100px;
+    font-size: clamp(50px, 50vw, 100px);
     font-family: "Fredoka", sans-serif;
     font-weight: 700;
     color: #1c997e;
     margin-bottom: -2%;
+    white-space: normal;
+    overflow-wrap: break-word;
 }
 
 h2 {
