--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 h1 {
     text-align: center;
-    font-size: clamp(50px, 50vw, 100px);
+    font-size: 10vw;
     font-family: "Fredoka", sans-serif;
     font-weight: 700;
     color: #1c997e;
@@ -138,7 +138,7 @@ p {
 }
 
 .logo {
-    width: 200px;
+    width: 16vw;
     height: auto;
 }
 
